<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:cardElevation="@dimen/padding_normal"
        app:cardCornerRadius="@dimen/cardcorner_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="@dimen/double_padding"
        android:layout_marginBottom="@dimen/padding_normal"
        android:padding="@dimen/card_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_1"
                android:textColor="@color/blur_300"
                android:textSize="@dimen/txt_large_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/text_2"
                android:textColor="@color/red_700"
                android:textSize="@dimen/txt_large_size"
                android:textStyle="bold" />

            <TextView
                android:layout_below="@+id/text1"
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text_3" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text3"
                android:text="Chevrolet Spark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text4"
                android:layout_marginTop="@dimen/padding_normal"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="@dimen/drawable_padding"
                android:text="@string/text_5" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text4"
                android:layout_marginStart="@dimen/double_padding"
                android:layout_marginTop="@dimen/padding_normal"
                android:layout_toEndOf="@+id/text5"
                android:drawableStart="@drawable/ic_card_giftcard_black_24dp"
                android:drawablePadding="@dimen/drawable_padding"
                android:text="@string/text_6" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text4"
                android:layout_marginStart="@dimen/double_padding"
                android:layout_marginTop="@dimen/padding_normal"
                android:layout_toEndOf="@+id/text6"
                android:drawableStart="@drawable/ic_weekend_black_24dp"
                android:drawablePadding="@dimen/drawable_padding"
                android:text="@string/text_7" />

            <ImageView
                android:layout_width="160dp"
                android:layout_height="86dp"
                android:layout_below="@+id/text2"
                android:scaleType="centerCrop"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin_top"
                android:src="@drawable/images" />

            <TextView
                android:id="@+id/text8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text7"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text8" />

            <TextView
                android:id="@+id/text9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text7"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text9" />

            <TextView
                android:id="@+id/text10"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text7"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text10" />

            <TextView
                android:id="@+id/text11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text8"
                android:text="Pick-up" />

            <TextView
                android:id="@+id/text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue_200"
                android:layout_below="@+id/text8"
                android:layout_centerInParent="true"
                android:text="Non Airport" />

            <TextView
                android:id="@+id/text13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text8"
                android:layout_alignParentEnd="true"
                android:text="Drop-off" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>